--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -10,6 +10,7 @@
     --color-nine: #eaeaea;
     --color-success: #008932;
     --color-secondary: #ffeBa5;
+    --color-danger: #ff0000;
     --bg-card: rgba(240, 240, 240, 0.897);
     --text-primary: #949FF8;
     --text-secondary: #949FF8;
