--- a/assets/css/defaults.css
+++ b/assets/css/defaults.css
@@ -230,6 +230,30 @@ h6 {
     padding-left: var(--padding-6);
 }
 
+.pr-1 {
+    padding-right: var(--padding-1);
+}
+
+.pr-2 {
+    padding-right: var(--padding-2);
+}
+
+.pr-3 {
+    padding-right: var(--padding-3);
+}
+
+.pr-4 {
+    padding-right: var(--padding-4);
+}
+
+.pr-5 {
+    padding-right: var(--padding-5);
+}
+
+.pr-6 {
+    padding-right: var(--padding-6);
+}
+
 ul {
     list-style: none;
     padding: 0;
@@ -243,7 +267,7 @@ li {
 
 a {
     text-decoration: none;
-    color: var(--color-four);
+    color: var(--text-secondary);
 }
 
 a:hover {
@@ -287,12 +311,20 @@ img {
     text-align: left
 }
 
+.text-right {
+    text-align: right;
+}
+
 .text-primary {
     color: var(--text-primary) !important;
 }
 
 .text-fade {
     color: var(--text-fade) !important;
+}
+
+.text-danger {
+    color: var(--color-danger) !important;
 }
 
 .btn {
@@ -332,12 +364,12 @@ label {
 
 input {
     display: block;
-    width: 90%;
+    width: 80%;
     padding: 1rem;
     border-radius: 0.8rem;
-    border: 1px solid var(--color-three);
+    border: 1px solid var(--text-fade);
     background: var(--color-one);
-    color: var(--color-three);
+    color: var(--text-secondary);
     font-weight: 700;
     letter-spacing: 0.1rem;
     transition: all .5s ease-in-out;
@@ -396,6 +428,21 @@ input {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
 /* default values end */
