--- a/assets/css/slideshow.css
+++ b/assets/css/slideshow.css
@@ -1,5 +1,10 @@
-.mySlides {display: none}
-img {vertical-align: middle;}
+.mySlides {
+  display: none
+}
+
+img {
+  vertical-align: middle;
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -24,6 +29,14 @@ img {vertical-align: middle;}
   user-select: none;
 }
 
+.prev-1 {
+  left: 25% !important;
+}
+
+.next-1 {
+  right: 25% !important;
+}
+
 /* Position the "next button" to the right */
 .next {
   right: 0;
@@ -32,7 +45,7 @@ img {vertical-align: middle;}
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Caption text */
@@ -47,7 +60,7 @@ img {vertical-align: middle;}
 }
 
 /* Number text (1/3 etc) */
-.numbertext {
+.numbertext, .numbertext_2 {
   color: #f2f2f2;
   font-size: 12px;
   padding: 8px 12px;
@@ -56,7 +69,7 @@ img {vertical-align: middle;}
 }
 
 /* The dots/bullets/indicators */
-.dot {
+.dot, .dot_2 {
   cursor: pointer;
   height: 15px;
   width: 15px;
@@ -67,7 +80,7 @@ img {vertical-align: middle;}
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active, .dot:hover, .dot_2:hover {
   background-color: #717171;
 }
 
@@ -78,11 +91,18 @@ img {vertical-align: middle;}
 }
 
 @keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
+  from {
+    opacity: .4
+  }
+
+  to {
+    opacity: 1
+  }
 }
 
 /* On smaller screens, decrease text size */
 @media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
+  .prev, .next, .text {
+    font-size: 11px
+  }
 }
