--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -9,6 +9,50 @@ html, body {
     overflow-x: hidden;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 3rem;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
 .year-end-sale-content {
     display: flex;
     align-items: center;
@@ -150,4 +194,8 @@ html, body {
     align-items: flex-start;
     padding: 0.5rem;
     align-items: center;
+}
+
+.star-icon {
+    color: #FFD700;
 }
