--- a/assets/css/media_queries.css
+++ b/assets/css/media_queries.css
@@ -132,6 +132,13 @@
     .section-1-content {
         padding: 3rem;
     }
+
+    .search-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 0.5rem 1rem;
+    }
 }
 
 @media screen and (max-width: 900px) {
