--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -205,3 +205,14 @@ html, body {
     justify-content: center;
     padding: var(--padding-2);
 }
+
+.search-wrapper div input {
+    margin: auto;
+}
+
+.categories li {
+    padding: var(--padding-1);
+    margin: 1rem 0;
+    border-radius: 0.5rem;
+    border: 2px solid var(--color-two);
+}
